--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,19 +114,19 @@ pypi:
     - pip install -vvv --upgrade "$PyPI_INSTALLER"
     # HEVC support
     - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-hevc; exit_on_fail
+    - test-giftgrab-hevc-bgra; exit_on_fail
     # HEVC support with x265
     - pip install -vvv --install-option="--hevc" --install-option="--enable-gpl" --install-option="--x265" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-hevc; exit_on_fail
+    - test-giftgrab-hevc-bgra; exit_on_fail
     # hardware-accelerated HEVC
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-hevc; exit_on_fail
+    - test-giftgrab-hevc-bgra; exit_on_fail
     # Xvid support (OpenCV should get switched here)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-xvid; exit_on_fail
+    - test-giftgrab-xvid-bgra; exit_on_fail
     # VP9 support
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-vp9; exit_on_fail
+    - test-giftgrab-vp9-bgra; exit_on_fail
     # Epiphan DVI2PCIe Duo support (OpenCV)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
