Issue #47: BGR24 renamed to BGRA in Epiphan YML config files and tests __init__.py file

--- a/src/tests/epiphan/dvi2pcieduo/data/valueerror2.yml
+++ b/src/tests/epiphan/dvi2pcieduo/data/valueerror2.yml
@@ -1,5 +1,5 @@
 port: SDI
-colour_space: BGR24
+colour_space: BGRA
 frame_rate: 29.1
 file_path: /tmp/giftgrab/test-data-fetoscope
 timeout_limit: 20.0
