--- a/src/tests/epiphan/dvi2pcieduo/data/oserror.yml
+++ b/src/tests/epiphan/dvi2pcieduo/data/oserror.yml
@@ -1,5 +1,5 @@
 port: SDI
-colour_space: BGR24
+colour_space: BGRA
 frame_rate: 28.0
 file_path: /my-folder/this/path/should/never/be/created
 timeout_limit: 20.0
