Issue #47: renamed BGR24 to BGRA in CI script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,13 +174,13 @@ pypi-epiphan-dvi2pcie-duo:
     - pip install pytest
     # Epiphan DVI2PCIe Duo support (OpenCV)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-epiphan-dvi2pcieduo-bgr24; exit_on_fail
-    - edd-dvi-bgr24-hevc; exit_on_fail
-    - edd-sdi-bgr24-hevc; exit_on_fail
-    - edd-dvi-bgr24-xvid; exit_on_fail
-    - edd-sdi-bgr24-xvid; exit_on_fail
-    - edd-dvi-bgr24-vp9; exit_on_fail
-    - edd-sdi-bgr24-vp9; exit_on_fail
+    - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
+    - edd-dvi-bgra-hevc; exit_on_fail
+    - edd-sdi-bgra-hevc; exit_on_fail
+    - edd-dvi-bgra-xvid; exit_on_fail
+    - edd-sdi-bgra-xvid; exit_on_fail
+    - edd-dvi-bgra-vp9; exit_on_fail
+    - edd-sdi-bgra-vp9; exit_on_fail
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
     # TODO: issue #102
@@ -221,7 +221,7 @@ epiphan-dvi2pcie-duo:
     - export LIBVLC_LIBRARY_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/lib"
     - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON "$GiftGrab_SOURCE_DIR"
     - make -j; exit_on_fail
-    # test BGR24 colour space
+    # test BGRA colour space
     - check_epiphan_alive
     - ctest; exit_on_fail
     # test I420 colour space
