--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,14 +64,22 @@ linux:
     - make -j; exit_on_fail
     - ctest; exit_on_fail
     - make install
-    # Epiphan DVI2PCIe Duo support (OpenCV)
-    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON .
+    # deactivate Xvid to avoid interference with OpenCV in following tests
+    - cmake -D USE_XVID=OFF .
+    # Epiphan DVI2PCIe Duo support (OpenCV only)
+    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D USE_I420=OFF .
     - make -j; exit_on_fail
     # no ctest for Epiphan DVI2PCIe Duo on
     # general-purpose Linux test server
     - make install
-    # Epiphan DVI2PCIe Duo support (EpiphanSDK)
-    - cmake -D USE_I420=ON .
+    # Epiphan DVI2PCIe Duo support (libVLC only)
+    - cmake -D USE_BGRA=OFF -D USE_I420=ON .
+    - make -j; exit_on_fail
+    # no ctest for Epiphan DVI2PCIe Duo on
+    # general-purpose Linux test server
+    - make install
+    # Epiphan DVI2PCIe Duo support (both OpenCV and libVLC)
+    - cmake -D USE_BGRA=ON -D USE_I420=ON .
     - make -j; exit_on_fail
     # no ctest for Epiphan DVI2PCIe Duo on
     # general-purpose Linux test server
@@ -121,16 +129,18 @@ pypi:
     # hardware-accelerated HEVC
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-hevc-bgra; exit_on_fail
-    # Xvid support (OpenCV should get switched here)
+    # Xvid support
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-xvid-bgra; exit_on_fail
     # VP9 support
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-vp9-bgra; exit_on_fail
-    # Epiphan DVI2PCIe Duo support (OpenCV)
-    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
-    # Epiphan DVI2PCIe Duo support (libVLC)
-    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
+    # Epiphan DVI2PCIe Duo support (OpenCV only)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-i420" --upgrade "$PyPI_INSTALLER"
+    # Epiphan DVI2PCIe Duo support (libVLC only)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
+    # Epiphan DVI2PCIe Duo support (both OpenCV and libVLC)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-hevc-i420; exit_on_fail
     - test-giftgrab-vp9-i420; exit_on_fail
     - deactivate
@@ -174,8 +184,8 @@ pypi-epiphan-dvi2pcie-duo:
     # because pip seems to be getting confused about install options on Storz stack:
     - pip install PyYAML
     - pip install pytest
-    # Epiphan DVI2PCIe Duo support (OpenCV)
-    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
+    # Epiphan DVI2PCIe Duo support (OpenCV only)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-i420" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
     - edd-dvi-bgra-hevc; exit_on_fail
     - edd-sdi-bgra-hevc; exit_on_fail
@@ -183,8 +193,8 @@ pypi-epiphan-dvi2pcie-duo:
     - edd-sdi-bgra-xvid; exit_on_fail
     - edd-dvi-bgra-vp9; exit_on_fail
     - edd-sdi-bgra-vp9; exit_on_fail
-    # Epiphan DVI2PCIe Duo support (EpiphanSDK)
-    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
+    # Epiphan DVI2PCIe Duo support (libVLC only)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
     # TODO: issue #102
     # - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
@@ -195,7 +205,24 @@ pypi-epiphan-dvi2pcie-duo:
     - ls -alh ./*.avi
     - ls -alh ./*.webm
     - rm -f ./*.mp4 ./*.avi ./*.webm
-    - deactivate
+    # Epiphan DVI2PCIe Duo support (both OpenCV and libVLC)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
+    - edd-dvi-bgra-hevc; exit_on_fail
+    - edd-sdi-bgra-hevc; exit_on_fail
+    - edd-dvi-bgra-xvid; exit_on_fail
+    - edd-sdi-bgra-xvid; exit_on_fail
+    - edd-dvi-bgra-vp9; exit_on_fail
+    - edd-sdi-bgra-vp9; exit_on_fail
+    - edd-dvi-i420-hevc; exit_on_fail
+    - edd-sdi-i420-hevc; exit_on_fail
+    - edd-dvi-i420-vp9; exit_on_fail
+    - edd-sdi-i420-vp9; exit_on_fail
+    - ls -alh ./*.mp4
+    - ls -alh ./*.avi
+    - ls -alh ./*.webm
+    - rm -f ./*.mp4 ./*.avi ./*.webm
+   - deactivate
   tags:
     - gift-linux
     - gift-pypi
@@ -222,15 +249,19 @@ epiphan-dvi2pcie-duo:
     # for custom libVLC
     - export LIBVLC_INCLUDE_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/include"
     - export LIBVLC_LIBRARY_PATH="$STORZ_STACK_GIFTGRAB_ENV_ROOT/lib"
-    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON "$GiftGrab_SOURCE_DIR"
-    - make -j; exit_on_fail
     # test BGRA colour space
+    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D USE_I420=OFF -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON "$GiftGrab_SOURCE_DIR"
+    - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest; exit_on_fail
     # test I420 colour space
-    - cmake -D USE_I420=ON .
+    - cmake -D USE_BGRA=OFF -D USE_I420=ON .
     - make -j; exit_on_fail
-    # check smt connected to Epiphan
+    - check_epiphan_alive
+    - ctest; exit_on_fail
+    # test both colour spaces
+    - cmake -D USE_BGRA=ON -D USE_I420=ON .
+    - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest; exit_on_fail
   tags:
