--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,6 +66,13 @@ if(USE_X265 AND NOT ENABLE_GPL)
         "x265 is a GPL library: you must explicitly enable GPL (ENABLE_GPL=ON) to build GIFT-Grab with x265 support")
 endif(USE_X265 AND NOT ENABLE_GPL)
 
+# Check at least one colour space activated if using Epiphan DVI2PCIe Duo
+if(USE_EPIPHAN_DVI2PCIE_DUO)
+    if(NOT USE_BGRA AND NOT USE_I420)
+        MESSAGE(FATAL_ERROR "At least one colour space must be activated to use Epiphan DVI2PCIe Duo")
+    endif(NOT USE_BGRA AND NOT USE_I420)
+endif(USE_EPIPHAN_DVI2PCIE_DUO)
+
 # Determine whether OpenCV needed
 if((USE_EPIPHAN_DVI2PCIE_DUO AND USE_BGRA) OR
     USE_XVID)
