Issue #47: now running all tests (except for #90) using both colour spaces

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -9,20 +9,24 @@ SET(CONFIG_DIR ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/data)
 # SDI and DVI ports on their own
 LIST(APPEND PORTS SDI)
 LIST(APPEND PORTS DVI)
-foreach(PORT ${PORTS})
-    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_unit.py
-    )
-    LIST(APPEND TESTS_LIST ${NAME_TEST})
-endforeach(PORT)
+foreach(COLOUR_SPACE ${COLOUR_SPACES})
+    foreach(PORT ${PORTS})
+        SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE})
+        ADD_TEST(NAME ${NAME_TEST}
+            COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_unit.py
+        )
+        LIST(APPEND TESTS_LIST ${NAME_TEST})
+    endforeach(PORT)
+endforeach(COLOUR_SPACE)
 
 # Both ports in real-time
-SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_${COLOUR_SPACE})
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --colour-space=${COLOUR_SPACE} --config-dir=${CONFIG_DIR} test_realtime.py
-)
-LIST(APPEND TESTS_LIST ${NAME_TEST})
+foreach(COLOUR_SPACE ${COLOUR_SPACES})
+    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_${COLOUR_SPACE})
+    ADD_TEST(NAME ${NAME_TEST}
+        COMMAND py.test --colour-space=${COLOUR_SPACE} --config-dir=${CONFIG_DIR} test_realtime.py
+    )
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
+endforeach(COLOUR_SPACE)
 
 # to avoid copying stuff around
 SET_TESTS_PROPERTIES(${TESTS_LIST}
