--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -321,6 +321,84 @@ epiphan-dvi2pcie-duo:
   only:
     - this-branch-should-never-exist
 
+################## Device: Epiphan DVI2PCIe Duo ##################
+################## Platform: PyPI ################################
+################## Target: All ###################################
+pypi-epiphan-pearl:
+  stage: test_pypi
+  script:
+    - GiftGrab_PyPI_BUILD_DIR="$SCRATCH_DIR/pypi-epiphan-pearl"
+    - GiftGrab_PyPI_INSTALL_DIR="$GiftGrab_PyPI_BUILD_DIR/install"
+    - GiftGrab_venv=venv
+    - rm -rf "$GiftGrab_PyPI_BUILD_DIR"
+    - mkdir "$GiftGrab_PyPI_BUILD_DIR"
+    - rm -rf "$GiftGrab_PyPI_INSTALL_DIR"
+    - mkdir "$GiftGrab_PyPI_INSTALL_DIR"
+    - cd "$GiftGrab_PyPI_BUILD_DIR"
+    - export GiftGrab_PyPI_DIST_DIR=dist
+    - rm -rfv "$GiftGrab_PyPI_DIST_DIR"
+    - cd "$GiftGrab_SOURCE_DIR"
+    - python setup.py sdist
+    - mv "$GiftGrab_PyPI_DIST_DIR" "$GiftGrab_PyPI_BUILD_DIR"
+    - cd "$GiftGrab_PyPI_BUILD_DIR"
+    - export EPIPHAN_PEARL_IP="128.16.14.129"
+    - export EPIPHAN_PEARL_MRL="rtsp://$EPIPHAN_PEARL_IP:554/stream.sdp"
+    - virtualenv $GiftGrab_venv
+    - cd $GiftGrab_venv
+    - source bin/activate
+    - ls -alh ./*
+    - PyPI_INSTALLER="../$GiftGrab_PyPI_DIST_DIR/$(ls ../$GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
+    - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
+    # because pip seems to be getting confused about install options on Storz stack:
+    - pip install PyYAML
+    - pip install pytest
+    # Epiphan Pearl support (BGRA only) # TODO #85
+    # - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-pearl" --install-option="--no-i420" --upgrade "$PyPI_INSTALLER"
+    # - check_epiphan_pearl_alive
+    # - test-giftgrab-epiphan-pearl-bgra; exit_on_fail
+    # - ep-bgra-hevc; exit_on_fail
+    # - ep-bgra-hevc; exit_on_fail
+    # - ep-bgra-xvid; exit_on_fail
+    # - ep-bgra-xvid; exit_on_fail
+    # - ep-bgra-vp9; exit_on_fail
+    # - ep-bgra-vp9; exit_on_fail
+    # Epiphan Pearl support (I420 only)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--vp9" --install-option="--epiphan-pearl" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
+    - check_epiphan_pearl_alive
+    - test-giftgrab-epiphan-pearl-i420; exit_on_fail
+    - ep-i420-hevc; exit_on_fail
+    - ep-i420-hevc; exit_on_fail
+    - ep-i420-vp9; exit_on_fail
+    - ep-i420-vp9; exit_on_fail
+    - ls -alh ./*.mp4
+    - ls -alh ./*.avi
+    - ls -alh ./*.webm
+    - rm -f ./*.mp4 ./*.avi ./*.webm
+    # Epiphan Pearl support (both BGRA and I420) TODO #85
+    # - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-pearl" --upgrade "$PyPI_INSTALLER"
+    # - test-giftgrab-epiphan-pearl-bgra; exit_on_fail
+    # - ep-bgra-hevc; exit_on_fail
+    # - ep-bgra-hevc; exit_on_fail
+    # - ep-bgra-xvid; exit_on_fail
+    # - ep-bgra-xvid; exit_on_fail
+    # - ep-bgra-vp9; exit_on_fail
+    # - ep-bgra-vp9; exit_on_fail
+    # - ep-i420-hevc; exit_on_fail
+    # - ep-i420-hevc; exit_on_fail
+    # - ep-i420-vp9; exit_on_fail
+    # - ep-i420-vp9; exit_on_fail
+    - ls -alh ./*.mp4
+    - ls -alh ./*.avi
+    - ls -alh ./*.webm
+    - rm -f ./*.mp4 ./*.avi ./*.webm
+    - deactivate
+  tags:
+    - gift-linux
+    - gift-pypi
+    - gift-epiphan-pearl
+  only:
+    - 85-add-support-for-epiphan-pearl
+
 ################## Device: Epiphan Pearl ##################
 epiphan-pearl:
   stage: test_cmake
