Issue #100: Epiphan SDK appended to non-free options

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,6 +67,10 @@ if(USE_NVENC AND NOT ENABLE_NONFREE)
     MESSAGE(FATAL_ERROR
         "NVENC (NVIDIA Video Codec SDK) has a proprietary licence: you must explicitly enable non-free (ENABLE_NONFREE=ON) to build GIFT-Grab with NVENC support")
 endif(USE_NVENC AND NOT ENABLE_NONFREE)
+if(USE_EPIPHANSDK AND NOT ENABLE_NONFREE)
+    MESSAGE(FATAL_ERROR
+        "Epiphan video grabbing SDK has a proprietary licence: you must explicitly enable non-free (ENABLE_NONFREE=ON) to build GIFT-Grab with Epiphan video grabbing SDK support.")
+endif(USE_EPIPHANSDK AND NOT ENABLE_NONFREE)
 
 # Check GPL explicitly enabled for relevant components
 if(USE_X265 AND NOT ENABLE_GPL)
