Issue #100: Epiphan SDK cmake file exporting all four include dirs instead of only the frmgrab.h dir

--- a/src/cmake/epiphansdk/CMakeLists.txt
+++ b/src/cmake/epiphansdk/CMakeLists.txt
@@ -168,7 +168,7 @@ SET(LIBS
 
 # Variables to be used by linking libraries
 SET(EpiphanSDK_INCLUDE_DIRS
-    $ENV{EpiphanSDK_DIR}/epiphan/frmgrab/include
+    ${INCLUDE_DIRS}
     CACHE INTERNAL "Epiphan video grabbing SDK include dirs"
     )
 SET(EpiphanSDK_LIBS
