Issue #100: EpiphanSDK_DVI renamed to Epiphan_DVI2PCIeDuo_DVI, EpiphanSDK_DVI_MAX_FRAME_RATE to Epiphan_DVI2PCIeDuo_DVI_MAX_FRAME_RATE (similarly for SDI)

--- a/src/cmake/epiphansdk/CMakeLists.txt
+++ b/src/cmake/epiphansdk/CMakeLists.txt
@@ -206,12 +206,12 @@ SET(EpiphanSDK_LIBS
 ## And actually define port IDs in corresponding header, only when installing
 #SET(DVI2PCIeDuo_HEADER ${CMAKE_CURRENT_BINARY_DIR}/dvi2pcieduo_defs.h)
 #SET(DVI2PCIeDuo_HEADER_CODE
-#    "EXECUTE_PROCESS(COMMAND ./${FINDDEVICE_EXE} DVI OUTPUT_VARIABLE EpiphanSDK_DVI)\nEXECUTE_PROCESS(COMMAND ./${FINDDEVICE_EXE} SDI OUTPUT_VARIABLE EpiphanSDK_SDI)\n"
+#    "EXECUTE_PROCESS(COMMAND ./${FINDDEVICE_EXE} DVI OUTPUT_VARIABLE Epiphan_DVI2PCIeDuo_DVI)\nEXECUTE_PROCESS(COMMAND ./${FINDDEVICE_EXE} SDI OUTPUT_VARIABLE Epiphan_DVI2PCIeDuo_SDI)\n"
 #    )
 #if(DEFINE_MAX_FRAME_RATES)
 #    MESSAGE("You set DEFINE_MAX_FRAME_RATES ${DEFINE_MAX_FRAME_RATES}. So please make sure you have working devices turned on and connected to both ports of your Epiphan DVI2PCIe Duo")
 #    SET(DVI2PCIeDuo_HEADER_CODE
-#        "${DVI2PCIeDuo_HEADER_CODE}EXECUTE_PROCESS(COMMAND ./${FRAMERATE_EXE} DVI OUTPUT_VARIABLE EpiphanSDK_DVI_MAX_FRAME_RATE)\nEXECUTE_PROCESS(COMMAND ./${FRAMERATE_EXE} SDI OUTPUT_VARIABLE EpiphanSDK_SDI_MAX_FRAME_RATE)\nEXECUTE_PROCESS(COMMAND ./${FRAMERATE_EXE} DVI+SDI OUTPUT_VARIABLE EpiphanSDK_DUAL_MAX_FRAME_RATE)\n"
+#        "${DVI2PCIeDuo_HEADER_CODE}EXECUTE_PROCESS(COMMAND ./${FRAMERATE_EXE} DVI OUTPUT_VARIABLE Epiphan_DVI2PCIeDuo_DVI_MAX_FRAME_RATE)\nEXECUTE_PROCESS(COMMAND ./${FRAMERATE_EXE} SDI OUTPUT_VARIABLE Epiphan_DVI2PCIeDuo_SDI_MAX_FRAME_RATE)\nEXECUTE_PROCESS(COMMAND ./${FRAMERATE_EXE} DVI+SDI OUTPUT_VARIABLE Epiphan_DVI2PCIeDuo_DUAL_MAX_FRAME_RATE)\n"
 #        )
 #endif(DEFINE_MAX_FRAME_RATES)
 #SET(DVI2PCIeDuo_HEADER_CODE
