Issue #100: Epiphan_DVI2PCIeDuo_* macros defined in CMake files, rather than automated now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -194,6 +194,10 @@ if(USE_EPIPHANSDK)
     INCLUDE_DIRECTORIES(${EpiphanSDK_INCLUDE_DIRS})
     LIST(APPEND LIBS ${EpiphanSDK_LIBS})
     ADD_DEFINITIONS(-DUSE_EPIPHANSDK)
+    ADD_DEFINITIONS(-DEpiphan_DVI2PCIeDuo_DVI=${Epiphan_DVI2PCIeDuo_DVI})
+    ADD_DEFINITIONS(-DEpiphan_DVI2PCIeDuo_SDI=${Epiphan_DVI2PCIeDuo_SDI})
+    ADD_DEFINITIONS(-DEpiphan_DVI2PCIeDuo_DVI_MAX_FRAME_RATE=${Epiphan_DVI2PCIeDuo_DVI_MAX_FRAME_RATE})
+    ADD_DEFINITIONS(-DEpiphan_DVI2PCIeDuo_SDI_MAX_FRAME_RATE=${Epiphan_DVI2PCIeDuo_SDI_MAX_FRAME_RATE})
 
     INCLUDE_DIRECTORIES(epiphansdk)
     LIST(APPEND HEADERS epiphansdk/epiphansdk_video_source.h)
