--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -239,6 +239,17 @@ pypi-epiphan-dvi2pcie-duo:
     - ls -alh ./*.avi
     - ls -alh ./*.webm
     - rm -f ./*.mp4 ./*.avi ./*.webm
+    # Epiphan DVI2PCIe Duo support (both OpenCV and Epiphan SDK)
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
+    - edd-dvi-i420-hevc; exit_on_fail
+    - edd-sdi-i420-hevc; exit_on_fail
+    - edd-dvi-i420-vp9; exit_on_fail
+    - edd-sdi-i420-vp9; exit_on_fail
+    - ls -alh ./*.mp4
+    - ls -alh ./*.avi
+    - ls -alh ./*.webm
+    - rm -f ./*.mp4 ./*.avi ./*.webm
     - deactivate
   tags:
     - gift-linux
@@ -277,6 +288,11 @@ epiphan-dvi2pcie-duo:
     - ctest; exit_on_fail
     # test both colour spaces
     - cmake -D USE_BGRA=ON -D USE_I420=ON .
+    - make -j; exit_on_fail
+    - check_epiphan_alive
+    - ctest; exit_on_fail
+    # Epiphan SDK
+    - cmake -D USE_EPIPHANSDK=ON -D ENABLE_NONFREE=ON .
     - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest; exit_on_fail
